[gd_scene load_steps=3 format=3 uid="uid://de33bfmp2w6jc"]

[ext_resource type="Script" path="res://PauseMenu.gd" id="1_xgo0j"]
[ext_resource type="PackedScene" uid="uid://dq5ntdtxdyc8c" path="res://settings_menu.tscn" id="2_eru1t"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("1_xgo0j")

[node name="background" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.156863, 0.14902, 0.14902, 0.733333)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ResumeBtn" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(468, 93)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Resume Game"

[node name="Button3" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(468, 93)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Quit To Main Menu"

[node name="Button4" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(468, 93)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Quit To Desktop"

[node name="SettingsMenu" parent="CanvasLayer" instance=ExtResource("2_eru1t")]
visible = false
anchors_preset = -1
anchor_left = 0.078
anchor_top = 0.093
anchor_right = 0.911
anchor_bottom = 0.926
offset_left = 400.24
offset_top = 199.56
offset_right = -399.12
offset_bottom = -250.08

[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/ResumeBtn" to="CanvasLayer" method="_on_resume_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/Button3" to="CanvasLayer" method="_on_button_3_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/Button4" to="CanvasLayer" method="_on_button_4_pressed"]
